--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "pdfkit": "^0.16.0",
+    "qrcode": "^1.5.4",
     "sharp": "^0.33.5"
   }
 }
